subiendo clase semana 2

--- a/Modulo2/1. Estructuras de Control Iterativas.ipynb
+++ b/Modulo2/1. Estructuras de Control Iterativas.ipynb
@@ -65,11 +65,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informes del Año 2001\n",
+      "Informes del Año 2002\n",
+      "Informes del Año 2003\n",
+      "Informes del Año 2004\n",
+      "Informes del Año 2007\n",
+      "Informes del Año 2008\n",
+      "Informes del Año 2009\n",
+      "Salida forzada del bucle para año 2010\n",
+      "FInalizando el programa\n"
+     ]
+    }
+   ],
    "source": [
     "anio = 2001\n",
     "while anio <= 2012:\n",
@@ -255,7 +271,28 @@
     "metadata": {}
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "OPCIONES= \"\"\"\n",
+    "1) Raiz cuadrada A y B\n",
+    "2) A/B\n",
+    "3) A*B / 2.5\n",
+    "\n",
+    "Escriba \"SAL\" para salir del programa\n",
+    "\n",
+    "respuesta = \n",
+    "\"\"\"\n",
+    "while True:\n",
+    "    print(OPCIONES)\n",
+    "    respuesta=input(OPCIONES)\n",
+    "    if respuesta == \"SAL\":\n",
+    "        break\n",
+    "    elif respuesta ==\"1\":\n",
+    "        a=float(input(\"Ingrese el valor de A: \"))\n",
+    "        b=floar(input(\"Ingrese el valor de B: \"))\n",
+    "        calculo\n",
+    "\n",
+    "    break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -702,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
