--- a/Modulo1/6. Colecciones de Datos.ipynb
+++ b/Modulo1/6. Colecciones de Datos.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# validando tipo de dato de variable\n",
     "type(listado_numeros)"
@@ -83,9 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Recuerda que en Python los índices empiezan en 0.\n",
     "print(lista_elementos[0])  # 1\n",
@@ -103,9 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# lista[indice]= nuevo_valor\n",
     "listado_numeros[0] = 10\n",
@@ -163,9 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'dos', 3.0, True, 6]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lista_elementos.append(6)\n",
     "\n",
@@ -210,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'dos', 3.0, True]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Remove, unicamente eliminará el primer elemento que encuentre con el valor que le pasemos\n",
     "lista_elementos.remove(6)\n",
@@ -229,9 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lista_elementos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mlista_elementos\u001b[49m\u001b[38;5;241m.\u001b[39mreverse()\n\u001b[1;32m      2\u001b[0m lista_elementos\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lista_elementos' is not defined"
+     ]
+    }
+   ],
    "source": [
     "lista_elementos.reverse()\n",
     "lista_elementos"
@@ -1180,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -1195,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "metadata": {}
    },
@@ -1211,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "metadata": {}
    },
@@ -1243,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "metadata": {}
    },
@@ -1255,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "metadata": {}
    },
@@ -1267,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "metadata": {}
    },
@@ -1282,11 +1344,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'vida': 4, 'ataque': 2, 'defensa': 4, 'alcance': 2}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "caballero"
    ]
@@ -1400,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
@@ -1413,22 +1486,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "con1.intersection(con3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 5, 6, 7}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# conviritendo lista a conjunto\n",
     "lista = [1,2,3,3,3,5,6,7]\n",
@@ -1468,10 +1563,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' ', 'a', 'h', 'l', 'n', 'o', 'u'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_1 = [\"h\",'o','l','a',' ', 'm','u','n','d','o']\n",
+    "lista_2 = [\"h\",'o','l','a',' ', 'l','u','n','a']\n",
+    "\n",
+    "conjunto_1=set(lista_1)\n",
+    "conjunto_2=set(lista_2)\n",
+    "\n",
+    "conjunto_3=conjunto_1.intersection(conjunto_2)\n",
+    "conjunto_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ', 'h', 'a', 'o', 'u', 'l', 'n']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_final=list(conjunto_3)\n",
+    "lista_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ', 'a', 'h', 'l', 'n', 'o', 'u']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_final.sort()\n",
+    "lista_final"
+   ]
   }
  ],
  "metadata": {
@@ -1490,7 +1647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
