--- a/Modulo1/1. Conceptos básicos de Programación.ipynb
+++ b/Modulo1/1. Conceptos básicos de Programación.ipynb
@@ -38,9 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "#Imprimiendo valores\n",
     "print(1+1)"
@@ -55,18 +63,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "print('hola')"
+    "print('hola')\n",
+    "print(1+1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# control + enter - > ejecutar celda actual\n",
     "# shift + enter -> ejecutar celda actual y posicionarse en la siguiente celda\n",
@@ -206,10 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese 2 numeros: \n",
+      "La suma de los numeros es : 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ingrese 2 numeros: \")\n",
+    "a=int(input(\"Ingrese 1er numero: \"))\n",
+    "b=int(input(\"Ingrese 2do numero: \"))\n",
+    "c=(a+b)\n",
+    "print(\"La suma de los numeros es : \"+ str(c))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,8 +266,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area del triaungulo\n",
+      "El area del triangulo es10.0 metros cuadrados\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Area del triaungulo')\n",
+    "base=int(input('Ingrese la base: '))\n",
+    "altura=int(input('Ingrese la altura: '))\n",
+    "area = (base * altura) / 2\n",
+    "print(\"El area del triangulo es \"+str(area) +' metros cuadrados')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,15 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La temperatura es 113.0 F°\n"
+     ]
+    }
+   ],
+   "source": [
+    "C=int(input('Ingrese la temperatura en grados C°'))\n",
+    "F= (C * 9/5)+32\n",
+    "print('La temperatura es '+str(F)+' F°')\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
